--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </div>
     </header>
     
-    <section class="w3l-banner-blog py-5">
-        <div class="w3l-main-blog py-4">
+    <section class="l-banner-blog py-5">
+        <div class="l-main-blog py-4">
             <div class="owl-blog owl-carousel owl-theme">
                 <div class="item">
                     <div class="news-img position-relative">
@@ -215,7 +215,7 @@
         </div>
     </section>
  
-    <section class="w3l-blog-sec py-5">
+    <section class="l-blog-sec py-5">
         <div class="container py-md-5 py-4">
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -264,7 +264,7 @@
         </div>
     </section>
    
-    <section class="w3l-blog-sec">
+    <section class="l-blog-sec">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-4 col-md-6">
@@ -334,7 +334,7 @@
         </div>
     </section>
    
-    <section class="w3l-text-11 py-5">
+    <section class="l-text-11 py-5">
         <div class="container py-md-5 py-4">
             <div class="row">
                 <div class="col-lg-8 text11-content">
@@ -542,7 +542,7 @@
         </div>
     </section>
  
-    <section class="w3l-project pb-5" id="subscribe">
+    <section class="l-project pb-5" id="subscribe">
         <div class="container pb-4">
             <div class="bottom-info">
                 <div class="header-section text-center">
@@ -561,7 +561,7 @@
     <div class="projects" id="special">
         <div class="projects-grids">
             <div class="istagram-feeds">
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s1.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -569,7 +569,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s2.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -577,7 +577,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s3.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -585,7 +585,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s4.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -593,7 +593,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s5.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -601,7 +601,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s6.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -609,7 +609,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s8.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -617,7 +617,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s7.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -629,7 +629,7 @@
         </div>
     </div>
  
-    <footer class="w3l-footer-29-main">
+    <footer class="l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-sm-4">
                 <div class="row footer-top-29">
