--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
     </header>
   
     <section class="inner-banner py-5">
-        <div class="w3l-breadcrumb py-lg-5">
+        <div class="l-breadcrumb py-lg-5">
             <div class="container pt-sm-5 pt-4 pb-sm-4">
                 <h4 class="inner-text-title font-weight-bold pt-5">About Us</h4>
                 <ul class="breadcrumbs-custom-path">
@@ -97,9 +97,9 @@
         </div>
     </section>
    
-    <section class="w3_stats pb-5" id="stats">
+    <section class="_stats pb-5" id="stats">
         <div class="container pb-md-5 pb-4">
-            <div class="w3-stats">
+            <div class="-stats">
                 <div class="row text-center">
                     <div class="col-lg-3 col-sm-6">
                         <div class="counter">
@@ -130,7 +130,7 @@
         </div>
     </section>
    
-    <section class="w3l-feature-8">
+    <section class="l-feature-8">
         <div class="features-main py-5">
             <div class="container py-md-5 py-4">
                 <div class="row text-center">
@@ -204,7 +204,7 @@
         </div>
     </section>
    
-    <section class="w3l-team section py-5" id="team">
+    <section class="l-team section py-5" id="team">
         <div class="container py-md-5 py-4">
             <h3 class="title-style text-center mb-lg-5 mb-4">Our Amazing Chef's</h3>
             <div class="row">
@@ -300,7 +300,7 @@
    
    
    
-    <section class="w3l-project py-5" id="subscribe">
+    <section class="l-project py-5" id="subscribe">
         <div class="container py-4">
             <div class="bottom-info">
                 <div class="header-section text-center">
@@ -319,7 +319,7 @@
     <div class="projects" id="special">
         <div class="projects-grids">
             <div class="istagram-feeds">
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s1.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -327,7 +327,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s2.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -335,7 +335,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s3.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -343,7 +343,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s4.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -351,7 +351,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s5.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -359,7 +359,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s6.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -367,7 +367,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s8.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -375,7 +375,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s7.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -387,7 +387,7 @@
         </div>
     </div>
     
-    <footer class="w3l-footer-29-main">
+    <footer class="l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-sm-4">
                 <div class="row footer-top-29">
