--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
     </header>
    
     <section class="inner-banner py-5">
-        <div class="w3l-breadcrumb py-lg-5">
+        <div class="l-breadcrumb py-lg-5">
             <div class="container pt-sm-5 pt-4 pb-sm-4">
                 <h4 class="inner-text-title font-weight-bold pt-5">Contact Us</h4>
                 <ul class="breadcrumbs-custom-path">
@@ -86,7 +86,7 @@
         </div>
     </section>
    
-    <section class="w3l-contact-11 py-5" id="contact">
+    <section class="l-contact-11 py-5" id="contact">
         <div class="container py-md-5 py-4">
             <div class="row text-center mb-5 pb-sm-4">
                 <div class="col-lg-3 col-sm-6 contact-info">
@@ -118,7 +118,7 @@
     <div class="projects" id="special">
         <div class="projects-grids">
             <div class="istagram-feeds">
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s1.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -126,7 +126,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s2.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -134,7 +134,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s3.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -142,7 +142,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s4.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -150,7 +150,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s5.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -158,7 +158,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s6.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -166,7 +166,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s8.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -174,7 +174,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="projects-w3l-grid-info">
+                <div class="projects-l-grid-info">
                     <a href="blog-single.html"><img src="assets/images/blog-s7.jpg" class="img-fluid" alt="" />
                         <div class="content-overlay"></div>
                         <div class="content-details fadeIn-top">
@@ -186,7 +186,7 @@
         </div>
     </div>
    
-    <footer class="w3l-footer-29-main">
+    <footer class="l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-sm-4">
                 <div class="row footer-top-29">
