--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
                                 </div>
                             </div>
                             <div class="teamy_content">
-                                <a href="#url" class="teamy_name">Rose</a>
+                                <a href="#url" class="teamy_name">Mike</a>
                                 <span class="teamy_post">Master Chef</span>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                                 </div>
                             </div>
                             <div class="teamy_content">
-                                <a href="#url" class="teamy_name">Namitha</a>
+                                <a href="#url" class="teamy_name">Jane</a>
                                 <span class="teamy_post">Chef</span>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                                 </div>
                             </div>
                             <div class="teamy_content">
-                                <a href="#url" class="teamy_name">Ana</a>
+                                <a href="#url" class="teamy_name">Anna</a>
                                 <span class="teamy_post">Master Chef</span>
                             </div>
                         </div>
@@ -288,7 +288,7 @@
                                 </div>
                             </div>
                             <div class="teamy_content">
-                                <a href="#url" class="teamy_name">Peeter </a>
+                                <a href="#url" class="teamy_name">Peter </a>
                                 <span class="teamy_post">Chef</span>
                             </div>
                         </div>
@@ -408,9 +408,9 @@
 
                     <div class="col-xl-5 col-lg-4 col-md-6 footer-list-29 footer-1 px-xl-5 mt-md-0 mt-5">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2">Address : Edepalli,Machilipatnam,521001.
+                        <p class="mb-2">Address : Giddalur, Prakasam, 523357.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+91 6234444567">+91 6234444567</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+91 7823819347">+91 7823819347</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">info@example.com</a></p>
                         <p>Support : <a href="mailto:info@support.com">info@support.com</a></p>
                     </div>
@@ -430,7 +430,7 @@
         </div>
         <section class="copyright text-center">
             <div class="container">
-                <p class="copy-footer-29"> <p class="copy-footer-29">© 2023  All rights reserved by jyothi></
+                <p class="copy-footer-29"> <p class="copy-footer-29">© 2023  All rights reserved by Pallavi Donapati</p>
             </div>
         </section>
        
