--- a/contact.html
+++ b/contact.html
@@ -92,12 +92,12 @@
                 <div class="col-lg-3 col-sm-6 contact-info">
                     <i class="fas fa-map-marked-alt"></i>
                     <h4>Location</h4>
-                    <p>Edepalli,Machilipatnam</p>
+                    <p>Giddalur, Prakasam</p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-md-0 mt-4">
                     <i class="fas fa-headset"></i>
                     <h4>Phone</h4>
-                    <p><a href="tel:+91 6234444567">+91 6234444567</a></p>
+                    <p><a href="tel:+91 7823819347">+91 7823819347</a></p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
                     <i class="fas fa-envelope-open-text"></i>
@@ -229,7 +229,7 @@
         </div>
         <section class="copyright text-center">
             <div class="container">
-                <p class="copy-footer-29"> <p class="copy-footer-29">© 2023  All rights reserved by jyothi></
+                <p class="copy-footer-29"> <p class="copy-footer-29">© 2023  All rights reserved by Pallavi Donapati</p>
             </div>
         </section>
     </footer>
