--- a/index.html
+++ b/index.html
@@ -650,9 +650,9 @@
 
                     <div class="col-xl-5 col-lg-4 col-md-6 footer-list-29 footer-1 px-xl-5 mt-md-0 mt-5">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2">Address : Edepalli,Machilipatnam,521001.
+                        <p class="mb-2">Address : Giddalur, Prakasam, 523357.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+91 6234444567">+91 6234444567</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+91 7823819347">+91 7823819347</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">info@example.com</a></p>
                         <p>Support : <a href="mailto:info@support.com">info@support.com</a></p>
                     </div>
@@ -672,7 +672,7 @@
         </div>
         <section class="copyright text-center">
             <div class="container">
-                <p class="copy-footer-29"> <p class="copy-footer-29">© 2023  All rights reserved by jyothi></p>
+                <p class="copy-footer-29"> <p class="copy-footer-29">© 2023  All rights reserved by Pallavi Donapati</p>
             </div>
         </section>
     </footer>
